plugins {
    id "us.kirchmeier.capsule" version "1.0.2"
}
apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.8
mainClassName = "com.wingman.client.Main"
jar.archiveName = "Wingman-core.jar"

compileJava {
    options.compilerArgs << "-Xlint:unchecked"
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.ow2.asm:asm-debug-all:5.2'
    compile 'org.reflections:reflections:0.9.10'

    compile 'com.squareup.okhttp:okhttp:2.7.5'
    compile 'com.squareup.okio:okio:1.11.0'

    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.google.guava:guava:21.0'
    compile 'com.github.zafarkhaja:java-semver:0.9.0'

    compile 'org.jetbrains:annotations:13.0'
    compile 'ch.qos.logback:logback-classic:1.1.9'
    compile 'uk.org.lidalia:sysout-over-slf4j:1.0.2'
}

task wrapper(type: Wrapper) {
    gradleVersion = '3.3'
}

task fatCapsule(type: FatCapsule) {
	archiveName = "Wingman.jar"
    def stringsFile = new File("src/main/resources/version.properties")
    stringsFile.write(System.getenv("TRAVIS_TAG") ?: System.getenv("BUILD_NUMBER") ?: "Developer")
    applicationClass mainClassName
}

task apiJar(type: Jar) {  
    from(sourceSets.main.output) {  
		archiveName = "Wingman-api.jar"
        include "com/wingman/client/api/**"
    }  
}
